test/types/records/split-init/incompatible-type2.good
incompatible-type2.chpl:3: In function 'test':
incompatible-type2.chpl:4: error: Cannot assign to int(64) from string
